--- a/frontend/index.html
+++ b/frontend/index.html
@@ -299,88 +299,91 @@
       <section id="home-about" class="home-about section">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-5 align-items-center">
-            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
-              <div class="about-image">
-                <img
-                  src="assets/img/health/facilities-1.webp"
-                  alt="Modern Healthcare Facility"
-                  class="img-fluid rounded-3 mb-4"
-                />
-                <div class="experience-badge">
-                  <span class="years">25+</span>
-                  <span class="text">Years of Excellence</span>
-                </div>
-              </div>
-            </div>
 
-            <div class="col-lg-6" data-aos="fade-left" data-aos-delay="300">
+            <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
               <div class="about-content">
-                <h2>PROFIL SINGKAT</h2>
-                <p class="lead">
-                  Histori Singkat RSMS Institusi Penyelenggara Pelatihan:
-                </p>
-                <ul>
-                  <li>Berawal dari Pengampuan oleh BAPELKES Provinsi Jawa Tengah pada tahun 2018–2019</li>
-                  <li>Divisi Diklat RSMS sebagai Institusi Penyelenggara Pelatihan Bidang Kesehatan berdasarkan SK KAPUS BPPSDMK Nomor HK.02.02/I/1826/2020 tanggal 21 Oktober 2020</li>
-                  <li>Kategori Akreditasi A (berlaku 5 tahun)</li>
-                </ul>
+                <h2 style="text-align: center;">PROFIL SINGKAT</h2>
 
-                <p class="lead">
-                  Pendayagunaan SDM RSMS:
-                </p>
-                <ul>
-                  <li>Tim Penyusun Mutu Pelatihan Tim Penjaminan Mutu Pelatihan</li>
-                  <li>TPM Tim Audit Mutu Internal</li>
-                  <li>Fasilitator Pelatihan (Narasumber & Instruktur)</li>
-                  <li>Panitia Penyelenggara Pelatihan</li>
-                </ul>
-
+                <!-- BAGIAN ATAS (2 INFO) -->
                 <div class="row g-4 mt-4">
                   <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                     <div class="feature-item">
-                      <div class="icon">
-                        <i class="bi bi-heart-pulse"></i>
-                      </div>
                       <h4>RSUD Prof. Dr. Margono Soekarjo Purwokerto menjadi RS Kelas A Pendidikan sejak tahun 2023</h4>
                     </div>
                   </div>
 
                   <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                     <div class="feature-item">
-                      <div class="icon">
-                        <i class="bi bi-star"></i>
-                      </div>
-                      <h4>SK Kemenkes RI Nomor HK.02.02/F/2866/2023 <a href="http://asik.rsmargono.go.id:7222/pelatihan_diklat/assets/download/SK%20RSUD%20PROF%20DR.MARGONO%20SOEKARJO%20(UTAMA%20FK%20UNIV.JENDERAL%20SOEDIRMAN).pdf" 
-                      target="_blank" 
-                      style="font-size: 14px; margin-left: 10px; text-decoration: none;"
-                    >
-                        Tampilan SK pdf/download
-                    </a></h4>
+                      <h4>
+                        SK Kemenkes RI Nomor HK.02.02/F/2866/2023 <br>
+                        <a href="http://asik.rsmargono.go.id:7222/pelatihan_diklat/assets/download/SK%20RSUD%20PROF%20DR.MARGONO%20SOEKARJO%20(UTAMA%20FK%20UNIV.JENDERAL%20SOEDIRMAN).pdf" 
+                          target="_blank"
+                          style="font-size: 14px; margin-left: 10px; text-decoration: none;">
+                          Tampilan SK pdf/download
+                        </a>
+                      </h4>
                     </div>
                   </div>
                 </div>
 
-                <div class="cta-wrapper mt-4">
-                  <a href="about.html" class="btn btn-primary"
-                    >Profil Selengkapnya</a
-                  >
-                  <a href="#" class="btn btn-outline">Tim Diklat</a>
+                <br>
+
+                <!-- BAGIAN FOTO & DESKRIPSI (INI YG HARUS DALAM SATU ROW) -->
+                <div class="row g-4 mt-2">
+
+                  <!-- FOTO -->
+                  <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
+                    <div class="about-image">
+                      <img
+                        src="assets/img/health/facilities-1.webp"
+                        alt="Modern Healthcare Facility"
+                        class="img-fluid rounded-3 mb-4"
+                      />
+                      <div class="experience-badge">
+                        <span class="years">25+</span>
+                        <span class="text">Years of Excellence</span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- DESKRIPSI -->
+                  <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
+                    <div class="about-content">
+                      <p class="lead">Histori Singkat RSMS Institusi Penyelenggara Pelatihan:</p>
+                      <ul>
+                        <li>Berawal dari Pengampuan oleh BAPELKES Provinsi Jawa Tengah pada tahun 2018–2019</li>
+                        <li>Divisi Diklat RSMS sebagai Institusi Penyelenggara Pelatihan berdasarkan SK KAPUS BPPSDMK Nomor HK.02.02/I/1826/2020</li>
+                        <li>Kategori Akreditasi A (berlaku 5 tahun)</li>
+                      </ul>
+
+                      <p class="lead">Pendayagunaan SDM RSMS:</p>
+                      <ul>
+                        <li>Tim Penyusun Mutu Pelatihan & Penjaminan Mutu Pelatihan</li>
+                        <li>TPM Tim Audit Mutu Internal</li>
+                        <li>Fasilitator Pelatihan (Narasumber & Instruktur)</li>
+                        <li>Panitia Penyelenggara Pelatihan</li>
+                      </ul>
+                        <!-- CTA BUTTON -->
+                        <div class="cta-wrapper mt-4">
+                          <a href="profil.html" class="btn btn-primary">Profil Selengkapnya</a>
+                          <a href="profil.html" class="btn btn-outline">Tim Diklat</a>
+                       </div>
+                    </div>
+                  </div>
+
                 </div>
+
               </div>
             </div>
-          </div>
 
-          <div
-            class="row mt-5 pt-4 certifications-row"
-            data-aos="fade-up"
-            data-aos-delay="600"
-          >
           </div>
         </div>
       </section>
+
       <!-- /Home About Section -->
 
       <!-- Calendar Section -->
+       <section>
         <div class="container section-title" data-aos="fade-up">
           <h2 style="text-align:center; margin-top:30px;">
             📅 KALENDER JADWAL PELATIHAN
@@ -549,24 +552,172 @@
 
               </div>
             </div>
+            <!-- ==== END MODAL DETAIL PELATIHAN ==== -->
 
             <script>
             function tutupModal() {
               document.getElementById("modalPelatihan").style.display = "none";
             }
             </script>
-          <!-- </section> -->
+       </section>
+          <!-- </section kalender> -->
 
-      <!-- Featured Departments Section -->
+
+        <!-- MENU PELATIHAN Section -->
       <section id="featured-departments" class="featured-departments section">
           <div class="container section-title" data-aos="fade-up">
-            <h2>Featured Departments</h2>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            <h2>MENU PELATIHAN</h2>
+            <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
           </div><!-- End Section Title -->
 
           <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-            <div class="row gy-4">
+            <!-- ==== MODAL DETAIL MENU PELATIHAN ==== -->
+                <div id="modalPelatihan" class="modal" style="
+                  display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5);
+                  justify-content:center; align-items:center; z-index:9999;
+                ">
+                  <div style="
+                    background:white; padding:25px; width:400px; border-radius:12px;
+                    box-shadow:0 6px 20px rgba(0,0,0,0.3); position: relative;
+                    text-align:left;
+                  ">
+
+                    <img id="modalFlyer" style="width:100%; border-radius:8px; margin-bottom:15px;">
+
+                    <h3 id="modalTitle" style="font-weight: bold;"></h3>
+                    <p><b>Kategori:</b> <span id="modalKategori"></span></p>
+                    <p><b>Mulai:</b> <span id="modalMulai"></span></p>
+                    <p><b>Selesai:</b> <span id="modalSelesai"></span></p>
+                    <p><b>Lokasi:</b> <span id="modalLokasi"></span></p>
+                    <p><b>Kuota:</b> <span id="modalPeserta"></span></p>
+
+                    <button 
+                      class="btn btn-outline" 
+                      id="btnDaftar"
+                      style="margin-top:15px; padding:10px 20px; background:#0062cc; 
+                      color:white; border:none; border-radius:8px; width:100%;">
+                        Daftar Pelatihan
+                    </button>
+
+                    <button onclick="tutupModal()" style="
+                      margin-top:10px; padding:10px 20px; background:#aaa;
+                      color:white; border:none; border-radius:8px; width:100%;
+                    ">Tutup</button>
+                  </div>
+                </div>
+              <!-- ==== END MODAL DETAIL MENU PELATIHAN ==== -->
+
+            <div class="row gy-4" id="menupelatihanContainer">
+              
+              <script>
+              const API = "http://localhost:5000/api/pelatihan";
+
+              // ====== FORMAT TANGGAL & WAKTU (SAMA SEPERTI FULLCALENDAR) ======
+              function formatTanggal(tanggal) {
+                return new Date(tanggal).toLocaleDateString("id-ID", {
+                  day: "2-digit",
+                  month: "long",
+                  year: "numeric",
+                });
+              }
+
+              function formatWaktu(waktuDB) {
+                return waktuDB ? waktuDB.substring(0, 5) + " WIB" : "-";
+              }
+
+              // ===================== LOAD LIST PELATIHAN (CARD) =====================
+              async function loadPelatihan() {
+                const res = await fetch(API);
+                const data = await res.json();
+
+                const container = document.getElementById("menupelatihanContainer");
+                container.innerHTML = "";
+
+                // Hanya tampilkan status publish (biar sama seperti kalender)
+                const filteredData = data.filter(item => item.status === "publish");
+
+                filteredData.forEach(p => {
+                  container.innerHTML += `
+                    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                      <div class="department-card">
+                        <div class="department-image flyer-rectangle">
+                          <img src="http://localhost:5000/uploads/flyer/${p.flyer_url}" class="img-fluid">
+                        </div>
+
+                        <div class="department-content">
+                          <div class="department-icon">
+                            <i class="fas fa-heartbeat"></i>
+                          </div>
+
+                          <h3>${p.nama_pelatihan}</h3>
+
+                          <a href="javascript:void(0)" class="btn-learn-more" onclick="openModal(${p.id_pelatihan}); return false;">
+                            <span>Detail Menu Pelatihan</span>
+                          </a>
+                        </div>
+                      </div>
+                    </div>`;
+                });
+              }
+
+              loadPelatihan();
+
+
+              // ===================== OPEN MODAL =====================
+              async function openModal(id) {
+                const res = await fetch(API);
+                const data = await res.json();
+
+                const p = data.find(x => x.id_pelatihan == id);
+
+                // Fill flyer
+                document.getElementById("modalFlyer").src =
+                  `http://localhost:5000/uploads/flyer/${p.flyer_url}`;
+
+                // Fill content
+                document.getElementById("modalTitle").innerText = p.nama_pelatihan;
+                document.getElementById("modalKategori").innerText = p.kategori;
+
+                // ==== FORMAT TANGGAL & WAKTU (SAMA SEPERTI FULLCALENDAR) ====
+                document.getElementById("modalMulai").innerText =
+                  formatTanggal(p.tanggal_mulai) + " | " + formatWaktu(p.waktu_mulai);
+
+                document.getElementById("modalSelesai").innerText =
+                  formatTanggal(p.tanggal_selesai) + " | " + formatWaktu(p.waktu_selesai);
+
+                document.getElementById("modalLokasi").innerText = p.lokasi;
+
+                document.getElementById("modalPeserta").innerText =
+                  p.sisa_kuota + " / " + p.kuota;
+
+                // ===== Logika Tombol Daftar =====
+                const btnDetail = document.getElementById("btnDetail");
+
+                if (p.sisa_kuota <= 0) {
+                  btnDetail.innerText = "Kuota Penuh";
+                  btnDetail.style.background = "#777";
+                  btnDetail.style.cursor = "not-allowed";
+                  btnDetail.onclick = null;
+                } else {
+                  btnDetail.innerText = "Daftar Pelatihan";
+                  btnDetail.style.background = "#28c7a8";
+                  btnDetail.style.cursor = "pointer";
+
+                  btnDetail.onclick = function () {
+                    window.location.href = `daftarpelatihan.html?id=${p.id_pelatihan}`;
+                  };
+                }
+
+                document.getElementById("modalPelatihan").style.display = "flex";
+              }
+
+              function tutupModal() {
+                document.getElementById("modalPelatihan").style.display = "none";
+              }
+            </script>
+
+                <!-- End Script JS Menu Pelatihan -->
 
               <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <div class="department-card">
@@ -697,7 +848,7 @@
           </div>
         </div>
       </section>
-      <!-- /Featured Departments Section -->
+        <!-- END MENU PELATIHAN Section -->
 
       <!-- Featured Services Section -->
       <section
